--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </article>
     </main>
         <footer>
-            <p>Site criado por <a href="https://github.com/WELLITOn07" target="_blank" ><abbr title="Meu Github">WELLITOn07</abbr></a > através do <a href="https://www.cursoemvideo.com/" target="_blank" ><abbr title="Site CursoemVídeo">CursoemVídeo</abbr></a></p>
+            <p>Site criado por <a href="https://github.com/WELLITOn07" target="_blank" ><abbr title="Visite meu Github">WELLITOn07</abbr></a > através do <a href="https://www.cursoemvideo.com/" target="_blank" ><abbr title="Site CursoemVídeo">CursoemVídeo</abbr></a></p>
         </footer>
     </body>
 </html>
